--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,8 @@
     <div class="header">
         <div class="headerContents">
             <div class="headerLogoContainer">
-                <img class="logo" src="images/Logo-Letra.svg" alt="" srcset="">
+                <img class="logo" src="images/logo.svg" alt="" srcset="">
+                <img class="logo" src="images/logo_Nombre.svg" alt="" srcset="">
             </div>    
         </div>
     </div>
